implementation_level/k8s/tea-store/persistence/ls_service.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ls-algorithm-persistence
spec:
  selector:
    matchLabels:
      app: ls-algorithm-persistence
  template:
    metadata:
      labels:
        app: ls-algorithm-persistence
    spec:
      serviceAccountName: scaler-service-account
      containers:
        - name: ls-algorithm
          image: giovaz94/tea-store-ls
          imagePullPolicy: Always
          ports:
            - containerPort: 7002
---
apiVersion: v1
kind: Service
metadata:
  name: ls-algorithm-persistence-service
spec:
  selector:
    app: ls-algorithm-persistence
  ports:
    - protocol: TCP
      port: 7002
      targetPort: 7002
