implementation_level/k8s/tea-store/persistence/persistence.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: persistence
spec:
  selector:
    matchLabels:
      type: persistence-type
  template:
    metadata:
      labels:
        type: persistence-type
    spec:
      containers:
        - name: persistence
          image: giovaz94/tea-store-general 
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: persistence-service
  labels:
    type: persistence-service-type
  annotations:
      prometheus.io/scrape: "true"
      prometheus.io/port: "80"
      prometheus.io/path: "/metrics"   # optional, defaults to /metrics
spec:
  selector:
    type: persistence-type
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: persistence-service
spec:
  host: persistence-service
  trafficPolicy:
    loadBalancer:
      simple: LEAST_REQUEST
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: persistence-service
spec:
  hosts:
    - persistence-service
  http:
    - route:
        - destination:
            host: persistence-service
